# Zerobus-Databricks

./: .dockerignore  .env.example  Dockerfile.api  Dockerfile.post_dados  README.md  docker-compose.yml  main.py  post_dados.py  pyproject.toml
databricks_infra/notebooks/: 01_create_bronze_tables.py.py  02_silver_transformations.py.py
databricks_infra/notebooks/Gold Metrics/: README.md
databricks_infra/notebooks/Gold Metrics/transformations/: Gold Metrics .sql  Untitled File 2026-02-03 23_48_08.md
databricks_infra/notebooks/Streaming Alerts/: README.md
databricks_infra/notebooks/Streaming Alerts/transformations/: streaming_consumer.py
producer_api/app/: generator.py  main.py  schemas.py  writer.py
